--- a/Aula1_nome_sobrenome/exercicio01.html
+++ b/Aula1_nome_sobrenome/exercicio01.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lol</title>
 </head>
 <body>
-    <p>A <a href="http://www.fatecjacarei.com.br/" target="_blank" title="Site da Fatec Jacareí">fatec Jacareí</a> é uma instituição do <a href="https://www.cps.sp.gov.br/" target="_blank" title="Centro Paula Souza">CPS.</a></p>
-    <p>O <a href="https://www.fatecjacarei.com.br/vestibular.html" target="_blank" title="Processo Seletivo para a Fatec">vestibular</a> da fatec ocorre duas vezes por ano.</p>
+    <div>
+        <p>
+            A <a href="http://www.fatecjacarei.com.br/" target="_blank" title="Site da Fatec Jacareí">fatec Jacareí</a> é uma instituição do <a href="https://www.cps.sp.gov.br/" target="_blank" title="Centro Paula Souza">CPS.</a>
+        </p>
+    </div>
+    <div>
+        <p>
+            O <a href="https://www.fatecjacarei.com.br/vestibular.html" target="_blank" title="Processo Seletivo para a Fatec">vestibular</a> da fatec ocorre duas vezes por ano.
+        </p>
+    </div>
 </body>
 
 <style>
@@ -16,12 +24,18 @@
         color: white;
         font-size: 45px;
         text-align: center;
+        text-decoration: none;
     }
     a{
         color: blue;
     }
     a:hover{
-        color: red;
+        color: rgb(145, 151, 242);
+    }
+    div{
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
     }
 </style>
 </html>
