--- a/Aula1_nome_sobrenome/exercico10.html
+++ b/Aula1_nome_sobrenome/exercico10.html
@@ -23,7 +23,7 @@
 </body>
 <style>
     *{
-        background-color: black;
+        background-color: rgb(0, 0, 0);
         color: white;
         font-size: 30px;
         text-decoration: none;
